# foxy-entities

./: README.md  pyproject.toml
foxy_entities/: __init__.py
social_media_entities/: __init__.py  abc.py  exceptions.py  management_entity.py  social_media_storage.py
tests/: test_abc.py  test_management_entity.py
