[project]
name = "social-media-entities"
version = "0.0.1"
description = "Library for managing social network entities"
authors = [
    {name = "shapdi", email = "shapranov.work@gmail.com"},
]
dependencies = ["pydantic>=2.12.5"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
test = [
    "pytest>=9.0.2",
]
dev = [
    "ruff>=0.14.8",
]
